add role and identifier
