# internal/handlers/handler.go
@@ -15,11 +15,11 @@ type handler struct {
 type Handlers interface {
 	GetHealtcheck() (*models.Health, error)
 
-	CreateStore(ctx context.Context, params *models.StoresRequest) error
-	GetStores(ctx context.Context) ([]*models.Stores, error)
-	GetStoreByID(ctx context.Context, storeID string) (*models.Stores, error)
-	DeleteStoreByID(ctx context.Context, storeID string) error
-	UpdateStoreByID(ctx context.Context, params *models.StoresRequest, storeID string) error
+	CreateStore(ctx context.Context, identifier string, params *models.StoresRequest) error
+	GetStores(ctx context.Context, identifier string) ([]*models.Stores, error)
+	GetStoreByID(ctx context.Context, identifier string, storeID string) (*models.Stores, error)
+	DeleteStoreByID(ctx context.Context, identifier string, storeID string) error
+	UpdateStoreByID(ctx context.Context, identifier string, params *models.StoresRequest, storeID string) error
 
 	Register(ctx context.Context, params *models.RegisterRequest) error
 	Login(ctx context.Context, params *models.LoginRequest) (*models.LoginResponse, error)
